--- a/src/components/booking/search-date/Search-date.css
+++ b/src/components/booking/search-date/Search-date.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 40%;
+    height: 50%;
     width: 70%;
     color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 2rem;
+    border-radius: 1%;
 }
 .checkbox-container {
     display: flex;
@@ -18,4 +21,66 @@
 }
 label, p {
     margin: 1rem 0;
+    font-family: "Raleway";
+}
+::-webkit-datetime-edit { padding: .5rem; }
+
+button {
+    border: none;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    cursor: pointer;
+    background-color: #fff;
+    color: #1c2329;
+    border: 2px solid #2d3f4d;
+    border-radius: 1%;
+    text-transform: uppercase;
+}
+
+  
+button:hover {
+    background-color: #2d3f4d;
+    color: #fff;
+}
+
+/* Removes the clear button from date inputs */
+input[type="date"]::-webkit-clear-button {
+    display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+    display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+    color: #2d3f4d;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    color: #2d3f4d;
+    font-family: "Helvetica", arial, sans-serif;
+    font-size: 18px;
+    border: 1px solid #2d3f4d;
+    background: #ecf0f1;
+    padding: 7px;
+    /* display: inline-block !important;
+    visibility: visible !important; */
+}
+
+input[type="date"]:focus {
+    color: #2d3f4d;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
 }
