--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -11,11 +11,8 @@
     color: white;
 }
 
-h1 {
+.heading-contact {
     position: absolute;
-    font-size: 4rem;
-    font-family: Raleway;
-    font-weight: 300;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -25,14 +22,8 @@ h1 {
     padding: 5em;
 }
 
-h2 {
-    font-size: 1.5rem;
-    font-family: Raleway;
+.small-header-contact {
     padding: 2em 0 0.5em 0;
-}
-
-p {
-    font-family: Raleway;
 }
 
 .facebook-icon,
