--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,194 @@
-.home {
+.header-home {
+    height: 100vh;
+    width: 100vw;
+    background-image: url('./../../images/home.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 1%;
+    position: relative;
+    text-align: center;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+}
+
+.big-logo {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 180px;
+}
+
+.home-container {
     min-height: 500px;
+}
+
+.about-us,
+.about-menu,
+.about-booking {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
+    ;
+}
+
+.about-us-header {
+    padding-top: 1em;
+    text-align: center;
+}
+
+.about-us-text,
+.about-menu-text,
+.about-booking-text {
+    text-align: center;
+    padding: 0 3em 0.5em 3em;
+    width: 300px;
+}
+
+.image-quote-section {
+    display: flex;
+    flex-direction: row;
+    height: 300px;
+    width: 100vw;
+    background-color: #2d3f4d;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+}
+
+.image-small-section {
+    width: 50%;
+    overflow: hidden;
+}
+
+.quote-section {
+    width: 50%;
+}
+
+.small-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.quote-image {
+    width: 60%;
+    font-style: italic;
+    color: #ffffff;
+    opacity: 0.5;
+    font-size: 0.8rem;
+    padding: 2em 0 0 2em;
+}
+
+.about-menu-header,
+.about-booking-header {
+    font-size: 2rem;
+    padding-top: 1em;
+    text-align: center;
+}
+
+.menu-link,
+.booking-link {
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: #1c2329;
+    font-family: Raleway;
+    font-weight: 400;
+    padding-top: 2em;
+}
+
+.menu-link:hover,
+.booking-link:hover {
+    color: #2d3f4d;
+    text-decoration: underline;
+}
+
+.gallery-section {
+    height: 300px;
+    width: 100vw;
+    background-color: #2d3631;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+}
+
+.gallery-item {
+    width: 150px;
+    height: 150px;
+    margin: 0.2em;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.gallery-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-large-section {
+    height: 300px;
+    width: 100vw;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.image-large {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+@media (min-width: 768px) {
+
+    .big-logo {
+        width: 200px;
+    }
+
+}
+
+@media (min-width: 992px) {
+
+    .big-logo {
+        width: 250px;
+    }
+
+    .about-us,
+    .about-menu,
+    .about-booking {
+        height: 350px;
+    }
+
+
+    .about-menu-header,
+    .about-booking-header {
+        padding-top: 2em;
+    }
+
+    .about-us-text,
+    .about-menu-text,
+    .about-booking-text {
+        width: 400px;
+        font-size: 1.1rem;
+    }
+
+    .image-quote-section,
+    .gallery-section,
+    .image-large-section {
+        height: 400px;
+    }
+
+    .quote-image {
+        font-size: 1.2rem;
+    }
+
+
+    .gallery-item {
+        width: 200px;
+        height: 200px;
+    }
 }
