--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,4 +1,4 @@
-.container {
+.booking-main {
     min-height: 100vh;
     width: 100vw;
     background-image: url('https://images.unsplash.com/photo-1549194424-1eb871d0903f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80');
@@ -6,21 +6,67 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    align-items: center;
-}
-.headline {
-    flex: 1;
-    height: 100vh;
-    display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    color: #fff;
-    
+    align-items: center;
 }
+
+.booking-container {
+    background-color: #ffffff;
+    min-width: 90vw;
+    min-height: 80vw;
+    /* border-radius: 5px; */
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+}
+
+.headline h1{
+    text-align: center;
+    /* border: 1px solid green;  */
+    font-size: 1.5rem;
+    padding: 1em 0;
+    border-bottom: 1px solid lightgray;
+}
+
 .form-container {
-    flex: 1;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 1px solid green; 
+}
+
+@media (min-width: 768px) {
+
+    .container {
+        flex-direction: row;
+    }
+
+    .booking-container {
+        min-width: 60vw;
+        min-height: 40vw;
+    }
+
+}
+
+@media (min-width: 992px) {
+
+    .booking-container {
+        min-width: 50vw;
+        /* min-height: 40vw; */
+    }
+
+/* 
+    .headline {
+        flex: 1;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .form-container {
+        flex: 1;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    } */
+
+
 }
