--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,6 +1,7 @@
 .header-contact {
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-image: url('./../../images/contact.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
