--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,7 @@
 .header-home {
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-image: url('./../../images/home.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -46,6 +47,7 @@
     flex-direction: row;
     height: 300px;
     width: 100vw;
+    max-width: 100%;
     background-color: #2d3f4d;
     box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
 }
@@ -101,6 +103,7 @@
 .gallery-section {
     height: 300px;
     width: 100vw;
+    max-width: 100%;
     background-color: #2d3631;
     display: flex;
     flex-direction: row;
@@ -127,6 +130,7 @@
 .image-large-section {
     height: 300px;
     width: 100vw;
+    max-width: 100%;
     box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
