--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -10,6 +10,7 @@
     position: relative;
     text-align: center;
     color: white;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
 }
 
 .heading-contact {
