--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,6 +1,7 @@
 .booking-main {
     min-height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-image: url('https://images.unsplash.com/photo-1549194424-1eb871d0903f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80');
     background-position: center;
     background-repeat: no-repeat;
@@ -13,60 +14,29 @@
 
 .booking-container {
     background-color: #ffffff;
-    min-width: 90vw;
-    min-height: 80vw;
-    /* border-radius: 5px; */
+    margin: 2em 0;
+    width: 90vw;
+    min-height: 200px;
     box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
 }
 
-.headline h1{
+.headline h1 {
     text-align: center;
-    /* border: 1px solid green;  */
     font-size: 1.5rem;
     padding: 1em 0;
     border-bottom: 1px solid lightgray;
 }
 
-.form-container {
-    border: 1px solid green; 
-}
-
 @media (min-width: 768px) {
 
-    .container {
-        flex-direction: row;
-    }
-
     .booking-container {
-        min-width: 60vw;
-        min-height: 40vw;
+        width: 60vw;
     }
-
 }
 
 @media (min-width: 992px) {
 
     .booking-container {
-        min-width: 50vw;
-        /* min-height: 40vw; */
+        width: 50vw;
     }
-
-/* 
-    .headline {
-        flex: 1;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .form-container {
-        flex: 1;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    } */
-
-
 }
