add comments and clean code

--- a/src/components/booking/search-date/Search-date.css
+++ b/src/components/booking/search-date/Search-date.css
@@ -12,7 +12,8 @@
     border: 1px solid lightgrey;
 }
 
-.calendar .react-calendar__tile--active, .calendar .react-calendar__tile--active:enabled:focus {
+.calendar .react-calendar__tile--active,
+.calendar .react-calendar__tile--active:enabled:focus {
     background: #2d3f4d;
 }
 
@@ -21,7 +22,7 @@
 }
 
 .calendar .react-calendar__navigation__label {
-    font-family: "Raleway"; 
+    font-family: "Raleway";
     font-size: 1rem;
 }
 
