--- a/src/components/booking/search-date/Search-date.css
+++ b/src/components/booking/search-date/Search-date.css
@@ -1,6 +1,13 @@
 .container-search {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     padding: 2em;
     text-align: center;
@@ -42,15 +49,27 @@
 }
 
 .checkbox-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 .checkbox-right,
 .checkbox-left {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -66,7 +85,7 @@
     background: #2d3f4d;
     color: white;
     -webkit-transition-duration: 0.2s;
-    /* Safari */
+    -o-transition-duration: 0.2s;
     transition-duration: 0.2s;
     border: 1px solid black;
 }
