--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -10,6 +10,7 @@
     position: relative;
     text-align: center;
     color: white;
+    -webkit-box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
     box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
 }
 
@@ -17,6 +18,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
@@ -30,13 +33,13 @@
 
 .facebook-icon,
 .instagram-icon {
-  color: #2d3f4d;
-  font-size: 1.5rem;
-  margin: 0.2em;
+    color: #2d3f4d;
+    font-size: 1.5rem;
+    margin: 0.2em;
 }
 
 .facebook-icon:hover,
 .instagram-icon:hover {
-  color: #1c2329;
-  opacity: 0.8;
+    color: #1c2329;
+    opacity: 0.8;
 }
