--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,8 +6,14 @@
 
 .top-footer {
     background-color: #1c2329;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 50%;
 }
@@ -26,8 +32,14 @@
 
 .bottom-footer {
     height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 50%;
 }
@@ -36,13 +48,6 @@
     margin-right: 0.5em;
     margin-left: 0.5em;
 }
-
-
-
-
-/*.footer-content-wrapper {
-    
-}*/
 
 .small-logo {
     width: 150px;
