save everything to fix computer issue

--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -27,9 +27,9 @@
     border-bottom: 1px solid lightgray;
 }
 
-.form-container {
+/* .form-container {
     border: 1px solid green; 
-}
+} */
 
 @media (min-width: 768px) {
 
