--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -89,7 +89,7 @@
     text-decoration: none;
     font-size: 1.3rem;
     color: #1c2329;
-    font-family: Raleway;
+    font-family: 'Raleway';
     font-weight: 400;
     padding-top: 2em;
 }
