--- a/src/App.css
+++ b/src/App.css
@@ -54,13 +54,13 @@ html {
 }
 h1 {
 	font-size: 4rem;
-	font-family: Raleway;
+	font-family: 'Raleway', 'sans-serif';
 	font-weight: 300;
 }
 h2 {
 	font-size: 1.5rem;
-    font-family: Raleway;
+    font-family: 'Raleway';
 }
 p {
-    font-family: Raleway;
+    font-family: 'Raleway';
 }
