add sumbit validation, not working

--- a/src/components/booking/book-table/Book-table.css
+++ b/src/components/booking/book-table/Book-table.css
@@ -38,7 +38,7 @@
     text-decoration: none;
 }
 .error-message {
-    color: red;
+    color: #7F0000;
     display: block;
     padding: .5rem 0;
     font-family: 'Raleway', 'sans-serif';
