fix styling changes

--- a/src/components/admin/search/Search.css
+++ b/src/components/admin/search/Search.css
@@ -3,6 +3,16 @@
     min-width: 80vw;
 }
 
+.admin-search-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
 .label-bookings,
 .label-search-time {
     font-size: 1.1rem;
@@ -14,11 +24,18 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 1em 0;
+    margin-bottom: 1em;
 }
 
 .admin-checkbox-left,
 .admin-checkbox-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     font-size: 1rem;
     font-family: Raleway;
     margin: 0 1em;
@@ -30,6 +47,7 @@
 }
 
 .admin-button {
+    width: 150px;
     font-size: 1.1rem;
     font-family: Raleway;
     background-color: #1c2329;
@@ -47,6 +65,8 @@
     font-family: Raleway;
     border: 1px solid lightgrey;
     border-radius: 5px;
+    padding: .4em;
+    width: 150px;
 }
 
 @media (min-width: 768px) {
