--- a/src/components/admin/bookings/Bookings.css
+++ b/src/components/admin/bookings/Bookings.css
@@ -2,6 +2,16 @@
     margin: 2em;
 }
 
+.admin-update-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
 .admin-update-form label {
     font-family: Raleway;
     font-size: 0.9rem;
@@ -14,6 +24,7 @@
     border: 1px solid lightgrey;
     border-radius: 5px;
     padding: .4em;
+    width: 150px;
 }
 
 .admin-bookings-list {
