--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@ h1 {
 }
 h2 {
 	font-size: 1.5rem;
-    font-family: 'Raleway';
+    font-family: 'Raleway', 'sans-serif';
 }
 p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', 'sans-serif';
 }
