--- a/src/components/booking/confirmation/Confirmation.css
+++ b/src/components/booking/confirmation/Confirmation.css
@@ -15,7 +15,7 @@
 
 .confirm-heading {
     margin-bottom: 2em;
-    font-family: "Raleway";
+    font-family: 'Raleway', 'sans-serif';
     font-size: 1.2rem;
     font-weight: 800;
 }
