--- a/src/components/booking/search-date/Search-date.css
+++ b/src/components/booking/search-date/Search-date.css
@@ -14,7 +14,7 @@
 }
 
 .calendar .react-calendar {
-    font-family: "Raleway";
+    font-family: 'Raleway', 'sans-serif';
     margin: 0 auto;
     border: 1px solid lightgrey;
 }
@@ -29,7 +29,7 @@
 }
 
 .calendar .react-calendar__navigation__label {
-    font-family: "Raleway";
+    font-family: 'Raleway', 'sans-serif';
     font-size: 1rem;
 }
 
@@ -44,7 +44,7 @@
 .heading-date,
 .heading-time {
     margin: 1em 0;
-    font-family: "Raleway";
+    font-family: 'Raleway', 'sans-serif';
     font-size: 1.1rem;
 }
 
@@ -71,7 +71,7 @@
 }
 
 .checkbox-label {
-    font-family: "Raleway";
+    font-family: 'Raleway', 'sans-serif';
     font-size: 1.1rem;
     position: relative;
     cursor: pointer;
