--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -104,7 +104,7 @@
     text-decoration: none;
     font-size: 1.3rem;
     color: #1c2329;
-    font-family: 'Raleway';
+    font-family: 'Raleway', 'sans-serif';
     font-weight: 400;
     padding-top: 2em;
 }
