--- a/src/components/booking/search-date/Search-date.css
+++ b/src/components/booking/search-date/Search-date.css
@@ -17,6 +17,7 @@
     font-family: 'Raleway', 'sans-serif';
     margin: 0 auto;
     border: 1px solid lightgrey;
+    margin-bottom: 3rem;
 }
 
 .calendar .react-calendar__tile--active,
@@ -55,6 +56,7 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
 .checkbox-right,
